--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,7 +38,7 @@ variables:
   vs.appxPlatforms:         'ARM'
 
   # I would not expect you to have to change the rest of these unless you had a special reason:
-  unity.targetBuild:        'WindowsStoreApps'
+  unity.targetBuild:        'Android'
   unity.outputPath:         '/Builds/WSAPlayer'
   unity.editorPath:         '/Editor/Unity.exe'
   vs.packagePath:           '/AppPackages'
