--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -10,6 +10,9 @@
     "com.unity.ide.rider": "2.0.7",
     "com.unity.ide.visualstudio": "2.0.11",
     "com.unity.ide.vscode": "1.2.3",
+    "com.unity.purchasing": "4.0.3",
+    "com.unity.purchasing.udp": "2.0.0",
+    "com.unity.recorder": "2.5.5",
     "com.unity.test-framework": "1.1.27",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.modules.ai": "1.0.0",
